# ide-haskell-profiteurjs

./: CHANGELOG.md  README.md  package-lock.json  package.json
hs/: .gitignore  Makefile  hs.cabal  hs.min.js  stack.yaml
hs/src/: Main.hs
lib/: config.js  ide-haskell-profiteurjs-view.js  ide-haskell-profiteurjs.js
src/: atom-config.d.ts  config.ts  ide-haskell-profiteurjs-view.ts  ide-haskell-profiteurjs.ts
