name: hs
version: 0.1.0.0
cabal-version: >=1.10
build-type: Simple
license: MIT
license-file: LICENSE
maintainer: root@livid.pp.ru
author: Nikolay Yakimov

executable hs
    main-is: Main.hs
    other-modules: Foreign
    hs-source-dirs: src
    cpp-options: -DGHCJS_BROWSER
    build-depends:
        base >=4.8 && <4.9,
        profiteur,
        text,
        bytestring,
        ghcjs-base ==0.2.*
    default-language: Haskell2010
    other-extensions: OverloadedStrings ViewPatterns TupleSections
